--- a/_layouts/hiring.html
+++ b/_layouts/hiring.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="small-12 large-9 columns">
         <h4>Software Engineer</h4>
-          <p>Are you a software engineer interested in working on problems that potentially impact millions of Americans? Solve our <a href="https://github.com/adhocteam/adhoc_homework/">code challenges</a> and <a href="{{ site.url }}/contact/">get in touch</a>. We are inclusive, and if you are a woman or person of color, we want to work with you.</p>
+          <p>Are you a software engineer interested in working on problems that potentially impact millions of Americans? Solve our <a href="https://github.com/adhocteam/adhoc_homework/">code challenges</a> and <a href="mailto:jobs@adhocteam.us">get in touch</a>. We are inclusive, and if you are a woman or person of color, we want to work with you.</p>
           <h4>Designer / Front end developer / UX</h4>
           <p>We are looking for civic-minded designers to bring good design and serious UX chops to solve big problems. <a href="https://github.com/adhocteam/adhocteam.github.io"> Fork our website</a>, do your thing, then along with your GitHub profile and a resume, send us a pull request to show us what you've got.</p>
       </div>
