Update to relative links where appropriate. Change name of PSD file to include extension.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
   	</div>
 	</div>
 </footer>
-<script src="{{ site.url }}/assets/js/vendor/classie.js"></script>
-<script src="{{ site.url }}/assets/js/vendor/demo1.js"></script>
+<script src="/assets/js/vendor/classie.js"></script>
+<script src="/assets/js/vendor/demo1.js"></script>
 <!-- Google Analytics -->
 </body>
 </html>
