--- a/_layouts/patient-evaluations.html
+++ b/_layouts/patient-evaluations.html
@@ -14,7 +14,7 @@
   <div class="primary">
 	  <div class="row">
 	    <div class="small-12 columns">
-	      <img class="feature" src="{{ site.url }}/assets/img/content/cui-large.png" />
+	      <img class="feature" src="/assets/img/content/cui-large.png" />
 	    </div>
 	  </div>
     <div class="write-up">
