--- a/_layouts/window-shopping.html
+++ b/_layouts/window-shopping.html
@@ -14,7 +14,7 @@
   <div class="primary">
     <div class="row">
         <div class="small-12 columns">
-          <img class="feature" src="{{ site.url }}/assets/img/content/healthcare-large.png" alt="screenshot" />
+          <img class="feature" src="/assets/img/content/healthcare-large.png" alt="screenshot" />
         </div>
       </div>
 
