--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,10 @@
   <button type="button" class="overlay-close">Close</button>
   <nav role="menu">
     <ul class="nav">
-      <li><a href="{{ site.url }}/hire-us/">Hire us</a></li>
-      <li><a href="{{ site.url }}/case-studies/">Case studies</a></li>
-      <li><a href="{{ site.url }}/our-team/">Our team</a></li>
-      <li><a href="{{ site.url }}/hiring/">Join us</a></li>
+      <li><a href="/hire-us/">Hire us</a></li>
+      <li><a href="/case-studies/">Case studies</a></li>
+      <li><a href="/our-team/">Our team</a></li>
+      <li><a href="/hiring/">Join us</a></li>
 
     </ul>
   </nav>
