--- a/_layouts/hiring.html
+++ b/_layouts/hiring.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="small-12 large-9 columns">
         <h2>We&rsquo;re hiring.</h2>
-        <p>Interested in joining <a href="/team">the team</a>?</p>
+        <p>Interested in joining <a href="/our-team/">the team</a>?</p>
         <p>Ad Hoc LLC is based in Washington, DC, but we are a virtual company, and have people working all over the USA (Chicago, Providence, Portland, Massachusetts, Seattle, San Francisco).</p>
       </div>
     </div>
