Remove unused images, change references to assets to be relative.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,15 +20,15 @@ https://github.com/adhocteam/adhoc_homework
 <title>{{ page.title }} Ad Hoc, LLC</title>
 
 <!-- Icons -->
-<link rel="shortcut icon" href="{{ site.url }}/assets/img/design/icons/favicon.png" type="image/x-icon">
-<link rel="apple-touch-icon" href="{{ site.url }}/assets/img/design/icons/apple-icon-touch-57-precomposed.png">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/assets/img/design/icons/apple-icon-touch-72-precomposed.png">
-<link rel="apple-touch-icon" sizes="114x114" href="{{ site.url }}/assets/img/design/icons/apple-icon-touch-114-precomposed.png">
-<link rel="apple-touch-icon" sizes="157x157" href="{{ site.url }}/assets/img/design/icons/apple-icon-touch-157-precomposed.png">
+<link rel="shortcut icon" href="/assets/img/design/icons/favicon.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="/assets/img/design/icons/apple-icon-touch-57-precomposed.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/img/design/icons/apple-icon-touch-72-precomposed.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/img/design/icons/apple-icon-touch-114-precomposed.png">
+<link rel="apple-touch-icon" sizes="157x157" href="/assets/img/design/icons/apple-icon-touch-157-precomposed.png">
 
 <link rel='stylesheet' href='/assets/css/style.css?v={{ site.github.build_revision }}'>
 
-<link type="text/plain" rel="author" href="{{ site.url }}/humans.txt" />
+<link type="text/plain" rel="author" href="/humans.txt" />
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }} RSS Feed" href="http://dannychapman.com/feed/">
 
 <script>
@@ -73,12 +73,12 @@ if (typeof console !== 'undefined' && typeof console.log === 'function') {
 }
 </script>
 
-<script src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
-<script src="{{ site.url }}/assets/js/vendor/jquery-1.7.2.min.js"></script>
+<script src="/assets/js/vendor/modernizr.js"></script>
+<script src="/assets/js/vendor/jquery-1.7.2.min.js"></script>
 
-<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.css">
+<link rel="stylesheet" href="/assets/css/animate.css">
 
-<script src="{{ site.url }}/assets/js/vendor/wow.min.js"></script>
+<script src="/assets/js/vendor/wow.min.js"></script>
 <script>
  new WOW().init();
 </script>
