Rename and modify page names.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
   <footer role="contentinfo">
    	<div class="row wow fadeIn">
     	<div class="small-12 medium-6 medium-centered large-uncentered large-6 action columns">
-     		<span>Ready for a change?</span> <a class="button" href="/hire-us/">Hire us.</a>
+     		<span>Ready for a change?</span> <a class="button" href="/work-with-us/">Get in touch.</a>
     	</div>
     	<div class="small-12 medium-6 medium-centered large-uncentered columns social">
       	<ul>
