--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@ https://github.com/adhocteam/adhoc_homework
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta content='website' property='og:type'>
-  <title>{{ page.title }} Ad Hoc, LLC</title>
+  <title>{{ page.title }} - Ad Hoc LLC</title>
 
   <!-- Icons -->
   <link rel="shortcut icon" href="/assets/img/design/icons/favicon.png" type="image/x-icon">
