--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,10 +4,10 @@
   <button type="button" class="overlay-close">Close</button>
   <nav role="menu">
     <ul class="nav">
-      <li><a href="/hire-us/">Hire us</a></li>
       <li><a href="/case-studies/">Case studies</a></li>
-      <li><a href="/our-team/">Our team</a></li>
-      <li><a href="/hiring/">Join us</a></li>
+      <li><a href="/team/">Our team</a></li>
+      <li><a href="/work-with-us/">Work with us</a></li>
+      <li><a href="/join/">Join the team</a></li>
     </ul>
   </nav>
 </div>
