--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   <nav role="menu">
     <ul class="nav">
       <li><a href="/case-studies/">Case studies</a></li>
-      <li><a href="/team/">Our team</a></li>
+      <li><a href="/about/">About us</a></li>
       <li><a href="/work-with-us/">Work with us</a></li>
       <li><a href="/join/">Join the team</a></li>
     </ul>
