--- a/_sass/_adhoc.scss
+++ b/_sass/_adhoc.scss
@@ -316,7 +316,18 @@ a.bar {
 
   &.second, &.third, &.fourth {background: #fff;}
 
-
+  &.about {
+      background: rgba(0, 0, 0, 0.12);
+      border-top: 1px solid rgba(255, 255, 255, 0.5);
+      p {
+          font-size: 20px;
+          color: #fff;
+          text-align: center;
+      }
+      a {
+          color: $secondary-color;
+      }
+  }
 
 
   &.second, &.third {
